--- a/src/css/WasteHeroDataDisplay.css
+++ b/src/css/WasteHeroDataDisplay.css
@@ -3,6 +3,8 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-bottom: 20px;
+    margin-top: 20px;
+    background-color: #e0e0e0;
   }
   
   .waste-hero-data-container h2 {
@@ -35,10 +37,71 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin-top: 10px;
+    margin-right: 30px;
   }
-  
+
   .download-button:hover {
     background-color: #45a049;
   }
+
+  .icon {
+    width: 50px; 
+    height: 50px; 
+    background-size: cover;
+  }
+
+  .color-block {
+    width: 30px; 
+    height: 30px; 
+  }
+
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+  }
+
+  .icon {
+    width: 50px; 
+    height: 50px; 
+    background-size: cover;
+    opacity: 0.7;
+  }
+
+  .waste-hero-card-container {
+    margin-bottom: 20px;
+    box-shadow: -3px 0px 11px 1px rgba(73, 66, 59, 0.4); 
+    border-radius: 20px;
+  }
+
   
+  .waste-hero-cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 20px;
+    
+  }
+  
+  .waste-hero-card {
+    background-color: #ffffff;
+    border-radius: 8px;
+    padding: 0px 20px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .waste-hero-card h4 {
+   
+    font-size: 1.2rem; 
+    color: #333333; 
+  }
+  
+  .waste-hero-card p {
+    font-size: 1rem; 
+    color: #666666; 
+  }
+  
+  .waste-hero-card strong {
+    font-weight: bold;
+    color: #000000; /* Strong text color */
+  }
