--- a/src/css/HelpPage.css
+++ b/src/css/HelpPage.css
@@ -23,3 +23,30 @@
     border: 2px solid #ccc; /* Add border to the images */
     border-radius: 5px; /* Add border radius for a rounded appearance */
 }
+.modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  .modal .enlarged-image {
+    max-width: 80%;
+    max-height: 80%;
+  }
+  
+  .modal .close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    color: #fff;
+    font-size: 30px;
+    cursor: pointer;
+  }
+  
